@@ -1,7 +1,7 @@
 import java.util.Scanner;
 
 public class Main{
-    public static void main(String[]args){
+    static void main(String[] args){
         User[] existingUser = new User[5];
 
         while(true) {
@@ -9,7 +9,7 @@ public class Main{
 
             System.out.println("Welcome");
             System.out.println("Enter your Username:");
-            String username = new String(sc.nextLine());
+            String username = sc.nextLine();
 
             System.out.println("Welcome " + username);
             User currentUser = null;
@@ -32,27 +32,38 @@ public class Main{
             boolean yes=false;
             int taskCnt=0;
             Integer choice = 0;
-            while (choice != 4) {
+            while (choice !=5) {
                 System.out.println("What you need?");
                 System.out.println("1.Add task");
                 System.out.println("2.List Task");
-                System.out.println("3.Exit");
+                System.out.println("3.Update");
+                System.out.println("4.Delete");
+                System.out.println("5.Exit");
                 System.out.println("Enter your choice:");
-                choice =new Integer(sc.nextLine());
+                choice = Integer.valueOf(sc.nextLine());
 
                 if (choice == 1) {
                     try
                     {while(!yes)
                     {
 
-                    String[] arr = currentUser.getTaskArray();
+                    Task[] arr = currentUser.getTaskArray();
                     boolean isTaskAvailable=false;
 
-                            for(int i=0;i<currentUser.getTaskArray().length;i++){
+                            for(int i=0;i<currentUser.getTaskArray().length;i++)
+                            {
                                 if(arr[i]!=null){
-                                    String Title=currentUser.getTaskArray()[i];
+                                    Task Title=currentUser.getTaskArray()[i];
+
                             System.out.print(i+1+".");
-                            System.out.println(Title);
+                            System.out.println(Title.getTitle());
+                            if(Title.getStatus()==null){
+                                System.out.println("Status:To Do");
+                            }
+                            else{
+                            System.out.println("Status:"+Title.getStatus());}
+
+                            System.out.println("Description:"+Title.getDescription());
                                 isTaskAvailable=true;}
                                 else{
                                     break;
@@ -66,16 +77,30 @@ public class Main{
                                 System.out.println("No task added before");
                             }
 
+                            System.out.println("Enter your Task Title:");
+                    Task taskTitle = new Task(sc.nextLine(),"To Do");
+                    currentUser.getTaskArray()[taskCnt]=taskTitle;
+                        while(!yes) {
+                            System.out.println("Do you what to add Description?(yes/no)");
+                            String con = sc.nextLine();
+                            if (con.equals("yes")) {
+                               System.out.println("Enter your Description");
+                               String des=sc.nextLine();
+                               currentUser.getTaskArray()[taskCnt].setDescription(des);
+                               break;
+                            }
+                            else if (con.equals("no"))   {
+                               break;
+                            }
+                            else {
+                                System.out.println("Enter proper value of string");
+                            }
+                        }
 
-                    System.out.println("Enter your Task Title:");
-                    String taskTitle =new String(sc.nextLine());
-                    if (currentUser != null) {
-                        currentUser.getTaskArray()[taskCnt]=taskTitle;
-                    }
                     taskCnt++;
                     while(!yes) {
                         System.out.println("Do you what to Continue?(yes/no)or give exit");
-                        String con = new String(sc.nextLine());
+                        String con = sc.nextLine();
                         if (con.equals("yes")) {
                             break;
                         }
@@ -93,33 +118,104 @@ public class Main{
                     }
 
                 }
-                else if(choice==2){
-                    String[] arr = currentUser.getTaskArray();
-                    boolean isTaskAvailable=false;
-                    for(int i=0;i<currentUser.getTaskArray().length;i++){
-                        if(arr[i]!=null){
-                            String Title=currentUser.getTaskArray()[i];
-                            System.out.print(i+1+".");
-                            System.out.println(Title);
-                            isTaskAvailable=true;}
-                        else{
-                            break;
+                else if(choice==2)
+                {Task[] arr = null;
+                    if (currentUser != null) {
+                        arr = currentUser.getTaskArray();
+
+                    try{
+                     {
+                        boolean isTaskAvailable = false;
+                        System.out.println("What do what to Display?");
+                        System.out.println("1.Diplay ToDo Task");
+                        System.out.println("2.Display In Progress Task");
+                        System.out.println("3.Display Progress Done Task");
+                        Integer display = new Integer(sc.nextLine());
+                        if (display == 1) {
+                            try{
+                            for (int i = 0; i < currentUser.getTaskArray().length; i++) {
+                                Task task = currentUser.getTaskArray()[i];
+                                if (task != null && "To Do".equals(task.getStatus())) {
+                                    System.out.println((i+1) + ". " + task.getTitle());
+                                }
+
+                            }
+
+                        }catch(Exception e){
+                                System.out.println("No task available in list");
+                            }
+                        }
+                        else if (display == 2) {
+                            for (int i = 0; i < currentUser.getTaskArray().length; i++) {
+                                if (currentUser.getTaskArray()[i].getTitle().equals("In Progress")) {
+                                    if (arr[i] != null) {
+                                        Task Title = currentUser.getTaskArray()[i];
+                                        System.out.print(i + 1 + ".");
+                                        System.out.println(Title.getTitle());
+                                        isTaskAvailable = true;
+                                    }
+                                    else {
+                                        break;
+                                    }
+                                }
+                            }
+                            if (!isTaskAvailable) {
+                                System.out.println("No task available in list");
+                            }
+                        }
+                        else if (display == 3) {
+                            for (int i = 0; i < currentUser.getTaskArray().length; i++)
+                            {if (currentUser.getTaskArray()[i].getTitle().equals("Progress Done")) {
+                                        if (arr[i] != null) {
+                                            Task Title = currentUser.getTaskArray()[i];
+                                            System.out.print(i + 1 + ".");
+                                            System.out.println(Title.getTitle());
+                                            isTaskAvailable = true;
+                                        }
+                                        else {
+                                            break;
+                                        }
+                                    }
+                            }
+                                if (!isTaskAvailable) {
+                                    System.out.println("No task available in list");
+
+                                }
                         }
                     }
-                    if(!isTaskAvailable){
-                        System.out.println("No task available in list");
+                        try {
+                            while (!yes) {
+                                System.out.println("Do you what to Continue?(yes/no)or give exit");
+                                String con = sc.nextLine();
+                                if (con.equals("yes")) {
+                                    break;
+                                }
+                                else if (con.equals("no") || con.equals("exit")) {
+                                    throw new Exception();
+                                }
+                                else {
+                                    System.out.println("Enter proper value of string");
+                                }
+                            }
+                        } catch (Exception e) {
+                            System.out.println("Your Exited!");
+                            break;
+                        }
+                }catch(Exception e){
+                        System.out.println("There is no Task Available");
+                    }
                     }
                 }
                 else if(choice==3){
                     while(!yes){
                             try{
-                                String[] arr = currentUser.getTaskArray();
+                                Task[] arr = currentUser.getTaskArray();
                                 boolean isTaskAvailable=false;
                                 for(int i=0;i<currentUser.getTaskArray().length;i++){
                                     if(arr[i]!=null){
-                                        String Title=currentUser.getTaskArray()[i];
+                                        Task Title=currentUser.getTaskArray()[i];
                                         System.out.print(i+1+".");
-                                        System.out.println(Title);
+                                        System.out.println(Title.getTitle());
                                         isTaskAvailable=true;}
                                     else{
                                         break;
@@ -130,21 +226,152 @@ public class Main{
                                 }
 
                         System.out.println("Enter your task number to update:");
-                        Integer upt = new Integer(sc.nextLine());
-                       {
-                        if (upt < currentUser.getTaskArray().length && currentUser.getTaskArray()[upt-1] != null) {
-                            System.out.println("Enter what do you want to update:");
-                            String upName = new String(sc.nextLine());
-                            currentUser.getTaskArray()[upt-1] = upName;
-                            System.out.println("your Task Updated!");
-                        }
+                        Integer upt = Integer.valueOf(sc.nextLine());
+                                if (upt < currentUser.getTaskArray().length && currentUser.getTaskArray()[upt - 1] != null)
+                                {
+                                    System.out.println("Which you want to Update");
+                                    System.out.println("1.Title");
+                                    System.out.println("2.Status");
+                                    System.out.println("3.Description");
+                                    System.out.println("Enter your choice:");
+                                    Integer cn = new Integer(sc.nextLine());
+                                    if (cn == 1) {
+                                        if (upt < currentUser.getTaskArray().length && currentUser.getTaskArray()[upt - 1] != null) {
+                                            System.out.println("Enter what do you want to update:");
+                                            Task upName = new Task(sc.nextLine());
+                                            currentUser.getTaskArray()[upt - 1] = upName;
+                                            System.out.println("your Task Title Updated!");
+                                        }
+                                        else {
+                                            throw new Exception();
+                                        }
+                                        try {
+                                            while (!yes) {
+                                                System.out.println("Do you what to Continue?(yes/no)or give exit");
+                                                String con = sc.nextLine();
+                                                if (con.equals("yes")) {
+                                                    break;
+                                                }
+                                                else if (con.equals("no") || con.equals("exit")) {
+                                                    throw new Exception();
+                                                }
+                                                else {
+                                                    System.out.println("Enter proper value of string");
+                                                }
+                                            }
+                                        } catch (Exception e) {
+                                            System.out.println("Your Exited!");
+                                            break;
+                                        }
+
+                                    }
+                                    else if (cn == 2) {
+
+                                        while (true) {
+                                            System.out.println("What Status are you now?");
+                                            System.out.println("1.To Do");
+                                            System.out.println("2.In Progress");
+                                            System.out.println("3.Progress Done");
+                                            System.out.println("Enter your choice:");
+                                            Integer status = new Integer(sc.nextLine());
+                                            if (status == 1) {
+                                                currentUser.getTaskArray()[upt - 1].setStatus("To Do");
+                                                System.out.println("Status Updated!");
+                                                break;
+                                            }
+                                            else if (status == 2) {
+                                                currentUser.getTaskArray()[upt - 1].setStatus("In Progress");
+                                                System.out.println("Status Updated!");
+                                                break;
+                                            }
+                                            else if (status == 3) {
+                                                currentUser.getTaskArray()[upt - 1].setStatus("Progress Done");
+                                                break;
+                                            }
+                                            else {
+                                                System.out.println("Enter proper choice");
+                                            }
+                                        }
+                                    }
+                                    else if (cn == 3) {
+                                        System.out.println("Enter your Task Description:");
+                                        String des = sc.nextLine();
+                                        currentUser.getTaskArray()[upt - 1].setDescription(des);
+                                        System.out.println("Your Description Updated");
+                                    }
+                                    else {
+                                        System.out.println("Enter proper choice");
+                                    }
+                                    try {
+                                        while (!yes) {
+                                            System.out.println("Do you what to Continue?(yes/no)or give exit");
+                                            String con = sc.nextLine();
+                                            if (con.equals("yes")) {
+                                                break;
+                                            }
+                                            else if (con.equals("no") || con.equals("exit")) {
+                                                throw new Exception();
+                                            }
+                                            else {
+                                                System.out.println("Enter proper value of string");
+                                            }
+                                        }
+                                    } catch (Exception e) {
+                                        System.out.println("Your Exited!");
+                                        break;
+                                    }
+                                }
+                                else{
+                                    throw new Exception();
+                                }
+
+                            }catch(Exception e){
+                        System.out.println("Enter the proper value to update!");
+                        continue;
+                    }
+                }}
+                else if (choice == 4) {
+                    try{
+                        while(!yes){
+
+                            Task[] arr = currentUser.getTaskArray();
+                    boolean isTaskAvailable=false;
+                    for(int i=0;i<currentUser.getTaskArray().length;i++){
+                        if(arr[i]!=null){
+                            Task Title=currentUser.getTaskArray()[i];
+                            System.out.print(i+1+".");
+                            System.out.println(Title.getTitle());
+                            isTaskAvailable=true;}
                         else{
-                            throw new Exception();
-                        }}
-                        try{
+                            break;
+                        }
+                    }
+                    if(!isTaskAvailable){
+                        System.out.println("No task available in list");
+                    }
+                    System.out.println("Enter task number to delete:");
+                    Integer delNum= Integer.valueOf(sc.nextLine());
+                    int delNumber=delNum-1;
+                    if (delNumber < currentUser.getTaskArray().length && currentUser.getTaskArray()[delNumber] != null){
+                        currentUser.getTaskArray()[delNumber]=null;
+                        System.out.println("Your Task Deleted!");
+                    }
+                    for(int i=0;i<currentUser.getTaskArray().length;i++){
+                        if(currentUser.getTaskArray()[i]==null){
+                            for(int j=i+1;j<currentUser.getTaskArray().length;j++){
+                                if(currentUser.getTaskArray()[j]!=null){
+                                    Task temp=currentUser.getTaskArray()[j];
+                                    currentUser.getTaskArray()[j]=currentUser.getTaskArray()[i];
+                                    currentUser.getTaskArray()[i]=temp;
+                                }
+                            }
+
+                        }
+                    }
+                    try{
                         while (!yes) {
                             System.out.println("Do you what to Continue?(yes/no)or give exit");
-                            String con = new String(sc.nextLine());
+                            String con = sc.nextLine();
                             if (con.equals("yes")) {
                                 break;
                             }
@@ -156,18 +383,16 @@ public class Main{
                             }
                         }
                     }catch(Exception e){
-                            System.out.println("Your Exited!");
-                            break;
-                        }
-
-
-
-                }catch(Exception e){
+                        System.out.println("Your Exited!");
+                        break;
+                    }
+                }
+                    }catch(Exception e){
                         System.out.println("Enter the proper value to update!");
                         continue;
                     }
-                }}
-                else if (choice == 4) {
+                }
+                else if (choice == 5) {
                     System.out.println("Task Manager Exited");
                     break;
                 }
